add delete route

--- a/views/dinosaurs/show.ejs
+++ b/views/dinosaurs/show.ejs
@@ -1,3 +1,7 @@
+<%#  Use this tag for comments in ejs! %>
+<h3>Hi my name is, <%= dino.name %> </h3>
+<p>I'm a <%= dino.type %> </p>
+
 <h1>Dino Time!</h2>
-<p><%= dino.name %></p>
-<p><%= dino.type %></p>
+    <p><%= dino.name %></p>
+    <p><%= dino.type %></p>
