--- a/views/dinosaurs/index.ejs
+++ b/views/dinosaurs/index.ejs
@@ -1,7 +1,19 @@
-<h2>Here are all my Dinosaurs</h2>
+<h2>Heres all my dinosaurs</h2>
+<form method="GET" action="/dinosaurs">
+    <label for="nameFilter">Filter by Name</label>
+    <input id="nameFilter" type="text" name="nameFilter">
+    <input type="submit">
+</form>
+
 <ul>
-    <% for(let dino of dinos) { %>
+    <% for (let idx = 0;idx < dinos.length; idx++ ) { %> 
+        <% let dino = dinos[idx] %>
         <p><%= dino.name %></p>
         <p><%= dino.type %></p>
+        <form method="POST" action="/dinosaurs/<%= idx %>?_method=DELETE">
+            <input type="submit" value="Delete">
+        </form>
     <% } %>
+
+    <%= dinos[0].name %>
 </ul>
